--- a/u3.grammar.html
+++ b/u3.grammar.html
@@ -133,7 +133,7 @@
               ตัวอย่างเช่น
             </p>
             <div class="row">
-              <div class="col-6 col-lg-6">
+              <div class="col-lg-6">
                 <ul>
                   <li>
                     <b>Have</b> you ever <b>ridden</b> a motorcycle? (= in your
@@ -156,7 +156,7 @@
               ตัวอย่างเช่น
             </p>
             <div class="row">
-              <div class="col-6 col-lg-6">
+              <div class="col-lg-6">
                 <ul>
                   <li>
                     I <b>have forgotten </b> my homework. (= I don't have it
@@ -174,7 +174,7 @@
               ตัวอย่างเช่น
             </p>
             <div class="row">
-              <div class="col-6 col-lg-6">
+              <div class="col-lg-6">
                 <ul>
                   <li>
                     I <b>have studied</b> English for five months. (= I'm still
@@ -227,7 +227,7 @@
               ตัวอย่างเช่น
             </p>
             <div class="row">
-              <div class="col-6 col-lg-6">
+              <div class="col-lg-6">
                 <ul>
                   <li>
                     We<b>'ve been</b> there <b>many times.</b> (= in our lives
