edit table responsive u3 grammar

--- a/u3.grammar.html
+++ b/u3.grammar.html
@@ -190,7 +190,7 @@
           </div>
 
           <!-- adj+prepos -->
-          <div>
+          <div class="col-lg-12" style="overflow-x:auto;">
             <p>
               <b> เราสร้าง present perfect ด้วย has/have + กริยาช่องที่ 3:</b>
             </p>
