edit dropdown and responsive

--- a/u3.grammar.html
+++ b/u3.grammar.html
@@ -357,6 +357,8 @@
                     id=""
                     class="form-select d-inline ans21"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">have gone</option>
                     <option value="2">went</option>
                   </select>
@@ -375,6 +377,8 @@
                     id=""
                     class="form-select d-inline ans22"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">have gone</option>
                     <option value="2">went</option>
                   </select>
@@ -393,6 +397,8 @@
                     id=""
                     class="form-select d-inline ans23"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">have visited</option>
                     <option value="2">visited</option></select
                   >China several times last year.
@@ -410,6 +416,8 @@
                     id=""
                     class="form-select d-inline ans24"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">have eaten</option>
                     <option value="2">ate</option>
                   </select>
@@ -428,6 +436,8 @@
                     id=""
                     class="form-select d-inline ans25"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">haven't watched</option>
                     <option value="2">didn't watch</option></select
                   >a good movie for a long time.
