--- a/practiceUnit2.html
+++ b/practiceUnit2.html
@@ -114,27 +114,27 @@
           <h4 class="text-center">Adjective ending in - ing and - ed</h4>
           <h5 class="text-center">(คำคุณศัพท์ที่ลงท้ายด้วย ing และ ed)</h5>
           <div class="row mt-3">
-            <div class="col-6">
+            <div class="col-lg-6">
               I thing horror movies are <b>frightening.</b>
             </div>
-            <div class="col-6">I'm <b>frightened by</b> horror movies.</div>
-            <div class="col-12">They're <b>frightening</b> movies.</div>
+            <div class="col-lg-6">I'm <b>frightened by</b> horror movies.</div>
+            <div class="col-lg-12 mb-3">They're <b>frightening</b> movies.</div>
 
-            <div class="col-6 mt-3">
+            <div class="col-lg-6 mt-3">
               I think action movies are <b>interesting.</b>
             </div>
-            <div class="col-6 mt-3">
+            <div class="col-lg-6">
               I'm <b>interested in</b> action movies.
             </div>
-            <div class="col-12">They're <b>interesting</b> movies.</div>
+            <div class="col-lg-12">They're <b>interesting</b> movies.</div>
 
-            <div class="col-6 mt-3">
+            <div class="col-lg-6 mt-3">
               Do you like jazz?</b>
             </div>
-            <div class="col-6 mt-3">
+            <div class="col-lg-6">
               Yes. It makes me feel <b>relexed.</b>
             </div>
-            <div class="col-12">Yes. I think it's very <b>relexing.</b>	</div>
+            <div class="col-lg-12">Yes. I think it's very <b>relexing.</b>	</div>
           </div>
           <br /><br />
 
