--- a/u2.grammar.html
+++ b/u2.grammar.html
@@ -277,6 +277,8 @@
                     id=""
                     class="form-select d-inline ans-1"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">boring</option>
                     <option value="2">bored</option>
                   </select>
@@ -298,6 +300,8 @@
                     id=""
                     class="form-select d-inline ans-2"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">frightening</option>
                     <option value="2">frightened</option>
                   </select>
@@ -320,6 +324,8 @@
                     id=""
                     class="form-select d-inline ans-3"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">tiring</option>
                     <option value="2">tired</option>
                   </select>
@@ -341,6 +347,8 @@
                     id=""
                     class="form-select d-inline ans-4"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">disappointing</option>
                     <option value="2">disappointed</option>
                   </select>
@@ -363,6 +371,8 @@
                     id=""
                     class="form-select d-inline ans-5"
                   >
+                  <option value="">โปรดเลือกคำตอบ</option>
+
                     <option value="1">amazing</option>
                     <option value="2">amazed</option>
                   </select>
