--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                         <a href="unit1.html" class="dropdown-item">UNIT 1</a>
                         <a href="unit2.html" class="dropdown-item">UNIT 2</a>
                         <a href="unit3.html" class="dropdown-item">UNIT 3</a>
+                        <a href="unit4.html" class="dropdown-item">UNIT 4</a>
+                        <a href="unit5.html" class="dropdown-item">UNIT 5</a>
+                        <a href="unit6.html" class="dropdown-item">UNIT 6</a>
                     </div>
                 </div>
                 <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
